--- a/main.css
+++ b/main.css
@@ -11,6 +11,9 @@ html{
 
 body{
   background-color:  hsl(216, 50%, 16%);
-  width: 30%;
+  width: 27%;
   margin-inline: auto;
+  margin-top: 100px;
+  padding: 30px;
+ border-radius: 20px;
 }
