--- a/main.css
+++ b/main.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -11,9 +13,16 @@ html{
 
 body{
   background-color:  hsl(216, 50%, 16%);
-  width: 27%;
+  width: 26%;
   margin-inline: auto;
   margin-top: 100px;
-  padding: 30px;
- border-radius: 20px;
+ padding-block: 25px;
+ padding-inline: 25px;
+ border-radius: 10px;
+}
+
+.Equilibrium{
+  border-radius: 10px;
+  width: 325px;
+  height: 320px;
 }
