--- a/main.css
+++ b/main.css
@@ -12,6 +12,10 @@ html{
 }
 
 body{
+  font-family: "Outfit", serif;
+  font-weight: 300;
+  font-style: normal;
+  font-size: 18px;
   background-color:  hsl(216, 50%, 16%);
   width: 26%;
   margin-inline: auto;
