--- a/main.css
+++ b/main.css
@@ -13,7 +13,7 @@ html{
 
 body{
   font-family: "Outfit", serif;
-  font-weight: 300;
+  font-weight: 400;
   font-style: normal;
   font-size: 18px;
   background-color:  hsl(216, 50%, 16%);
@@ -26,7 +26,14 @@ body{
 }
 
 .Equilibrium{
+  margin-bottom: 20px;
   border-radius: 10px;
   width: 325px;
   height: 320px;
+}
+
+h3{
+  font-family: "Outfit", serif;
+  font-weight: 600;
+  font-style: normal;
 }
