--- a/main.css
+++ b/main.css
@@ -33,7 +33,18 @@ body{
 }
 
 h3{
+  margin-bottom: 20px;
   font-family: "Outfit", serif;
   font-weight: 600;
   font-style: normal;
 }
+
+p{
+  color: hsl(215, 51%, 70%);
+  font-family: "Outfit", serif;
+  font-weight: 300;
+  font-style: normal;
+  font-size: 18px;
+  margin-bottom: 20px;
+}
+
