--- a/main.css
+++ b/main.css
@@ -48,3 +48,13 @@ p{
   margin-bottom: 20px;
 }
 
+.info{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+hr{
+  height: 1px;
+}
