--- a/main.css
+++ b/main.css
@@ -59,14 +59,16 @@ p{
   display: flex;
    align-items: center;
    gap: 10px;
-   
+   color: hsl(178, 100%, 50%); 
 }
 
 .time{
   display: flex;
    align-items: center;
    gap: 10px;
+   color: hsl(215, 51%, 70%);
 }
+
 
 hr{
   margin-bottom: 20px;
