--- a/main.css
+++ b/main.css
@@ -26,10 +26,16 @@ body {
 }
 
 .Equilibrium {
+ 
   margin-bottom: 20px;
   border-radius: 10px;
   width: 325px;
   height: 320px;
+}
+
+.Equilibrium:hover {
+  cursor: pointer;
+  background-color: hsl(178, 100%, 50%);
 }
 
 h3 {
