--- a/main.css
+++ b/main.css
@@ -25,8 +25,7 @@ body {
   border-radius: 10px;
 }
 
-.Equilibrium {
- 
+.Equilibrium-image {
   margin-bottom: 20px;
   border-radius: 10px;
   width: 325px;
