--- a/main.css
+++ b/main.css
@@ -48,7 +48,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: hsl(178, 100%, 50%, 0.5); /* Slight transparent overlay */
+  background-color: hsl(178, 100%, 50%, 0.5);
   opacity: 0;
   transition: opacity 0.3s ease-in-out;
 }
@@ -60,29 +60,18 @@ body {
   transform: translate(-50%, -50%);
   opacity: 0;
   transition: opacity 0.3s ease-in-out;
-  width: 50px; /* Adjust size as needed */
+  width: 50px; 
   height: 50px;
 }
 
 .image-container:hover::before,
 .image-container:hover .view-icon {
-  opacity: 1; /* Show overlay and icon on hover */
+  opacity: 1; 
 }
 
-
-/* .Equilibrium-image {
-  margin-bottom: 20px;
-  border-radius: 10px;
-  width: 325px;
-  height: 320px;
-}
-
-.Equilibrium:hover {
-  cursor: pointer;
-  background-color: hsl(178, 100%, 50%);
-} */
 
 h3 {
+  width: fit-content;
   margin-block: 20px;
   font-family: "Outfit", serif;
   font-weight: 600;
@@ -92,6 +81,7 @@ h3 {
 h3:hover{
   cursor: pointer;
   color: hsl(178, 100%, 50%);
+  transition: 0.3s ease-in-out;
 }
 
 p {
@@ -157,4 +147,5 @@ footer {
 .avatar-name:hover{
   color: hsl(178, 100%, 50%);
   cursor: pointer;
+  transition: 0.3s ease-in-out;
 }
